[project]
name = "whatsapp-clinical-chatbot-icmr-stw"
version = "1.0.0"
description = "Clinical decision support chatbot based on ICMR STW guidelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "groq",
    "qdrant-client",
    "upstash-redis",
    "sentence-transformers",
    "numpy",
    "pymupdf",
    "python-multipart",
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "anyio",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["app/tests"]